Cleaned up errors.
Cleaned up errors found from the validator.

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ article {
     text-align: center;
 }
 
-#yellow {
+#bananayellow {
     color: yellow;
 }
 
@@ -14,7 +14,7 @@ article {
     color: orange;
 }
 
-#pink {
+#waterpink {
     color: pink;
 }
 
